; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/extr_ssl_ciph.c_ssl_cipher_collect_aliases.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/extr_ssl_ciph.c_ssl_cipher_collect_aliases.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_4__*, i32* }

@cipher_aliases = common dso_local global %struct.TYPE_5__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i32, i32, i32, i32, i32, %struct.TYPE_4__*)* @ssl_cipher_collect_aliases to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ssl_cipher_collect_aliases(i32** %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, %struct.TYPE_4__* %6) #0 {
  %8 = alloca i32**, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_4__*, align 8
  %15 = alloca %struct.TYPE_4__*, align 8
  %16 = alloca i32**, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  store i32** %0, i32*** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store %struct.TYPE_4__* %6, %struct.TYPE_4__** %14, align 8
  %26 = load i32, i32* %10, align 4
  %27 = xor i32 %26, -1
  store i32 %27, i32* %18, align 4
  %28 = load i32, i32* %11, align 4
  %29 = xor i32 %28, -1
  store i32 %29, i32* %19, align 4
  %30 = load i32, i32* %12, align 4
  %31 = xor i32 %30, -1
  store i32 %31, i32* %20, align 4
  %32 = load i32, i32* %13, align 4
  %33 = xor i32 %32, -1
  store i32 %33, i32* %21, align 4
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  store %struct.TYPE_4__* %34, %struct.TYPE_4__** %15, align 8
  %35 = load i32**, i32*** %8, align 8
  store i32** %35, i32*** %16, align 8
  br label %36

36:                                               ; preds = %39, %7
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %38 = icmp ne %struct.TYPE_4__* %37, null
  br i1 %38, label %39, label %49

39:                                               ; preds = %36
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 1
  %42 = load i32*, i32** %41, align 8
  %43 = load i32**, i32*** %16, align 8
  store i32* %42, i32** %43, align 8
  %44 = load i32**, i32*** %16, align 8
  %45 = getelementptr inbounds i32*, i32** %44, i32 1
  store i32** %45, i32*** %16, align 8
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i32 0, i32 0
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %47, align 8
  store %struct.TYPE_4__* %48, %struct.TYPE_4__** %15, align 8
  br label %36

49:                                               ; preds = %36
  store i32 0, i32* %17, align 4
  br label %50

50:                                               ; preds = %127, %49
  %51 = load i32, i32* %17, align 4
  %52 = load i32, i32* %9, align 4
  %53 = icmp slt i32 %51, %52
  br i1 %53, label %54, label %130

54:                                               ; preds = %50
  %55 = load %struct.TYPE_5__*, %struct.TYPE_5__** @cipher_aliases, align 8
  %56 = load i32, i32* %17, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %55, i64 %57
  %59 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  store i32 %60, i32* %22, align 4
  %61 = load %struct.TYPE_5__*, %struct.TYPE_5__** @cipher_aliases, align 8
  %62 = load i32, i32* %17, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %61, i64 %63
  %65 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %64, i32 0, i32 1
  %66 = load i32, i32* %65, align 4
  store i32 %66, i32* %23, align 4
  %67 = load %struct.TYPE_5__*, %struct.TYPE_5__** @cipher_aliases, align 8
  %68 = load i32, i32* %17, align 4
  %69 = sext i32 %68 to i64
  %70 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %67, i64 %69
  %71 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %70, i32 0, i32 2
  %72 = load i32, i32* %71, align 4
  store i32 %72, i32* %24, align 4
  %73 = load %struct.TYPE_5__*, %struct.TYPE_5__** @cipher_aliases, align 8
  %74 = load i32, i32* %17, align 4
  %75 = sext i32 %74 to i64
  %76 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %73, i64 %75
  %77 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %76, i32 0, i32 3
  %78 = load i32, i32* %77, align 4
  store i32 %78, i32* %25, align 4
  %79 = load i32, i32* %22, align 4
  %80 = icmp ne i32 %79, 0
  br i1 %80, label %81, label %88

81:                                               ; preds = %54
  %82 = load i32, i32* %22, align 4
  %83 = load i32, i32* %18, align 4
  %84 = and i32 %82, %83
  %85 = icmp eq i32 %84, 0
  br i1 %85, label %86, label %87

86:                                               ; preds = %81
  br label %127

87:                                               ; preds = %81
  br label %88

88:                                               ; preds = %87, %54
  %89 = load i32, i32* %23, align 4
  %90 = icmp ne i32 %89, 0
  br i1 %90, label %91, label %98

91:                                               ; preds = %88
  %92 = load i32, i32* %23, align 4
  %93 = load i32, i32* %19, align 4
  %94 = and i32 %92, %93
  %95 = icmp eq i32 %94, 0
  br i1 %95, label %96, label %97

96:                                               ; preds = %91
  br label %127

97:                                               ; preds = %91
  br label %98

98:                                               ; preds = %97, %88
  %99 = load i32, i32* %24, align 4
  %100 = icmp ne i32 %99, 0
  br i1 %100, label %101, label %108

101:                                              ; preds = %98
  %102 = load i32, i32* %24, align 4
  %103 = load i32, i32* %20, align 4
  %104 = and i32 %102, %103
  %105 = icmp eq i32 %104, 0
  br i1 %105, label %106, label %107

106:                                              ; preds = %101
  br label %127

107:                                              ; preds = %101
  br label %108

108:                                              ; preds = %107, %98
  %109 = load i32, i32* %25, align 4
  %110 = icmp ne i32 %109, 0
  br i1 %110, label %111, label %118

111:                                              ; preds = %108
  %112 = load i32, i32* %25, align 4
  %113 = load i32, i32* %21, align 4
  %114 = and i32 %112, %113
  %115 = icmp eq i32 %114, 0
  br i1 %115, label %116, label %117

116:                                              ; preds = %111
  br label %127

117:                                              ; preds = %111
  br label %118

118:                                              ; preds = %117, %108
  %119 = load %struct.TYPE_5__*, %struct.TYPE_5__** @cipher_aliases, align 8
  %120 = load i32, i32* %17, align 4
  %121 = sext i32 %120 to i64
  %122 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %119, i64 %121
  %123 = bitcast %struct.TYPE_5__* %122 to i32*
  %124 = load i32**, i32*** %16, align 8
  store i32* %123, i32** %124, align 8
  %125 = load i32**, i32*** %16, align 8
  %126 = getelementptr inbounds i32*, i32** %125, i32 1
  store i32** %126, i32*** %16, align 8
  br label %127

127:                                              ; preds = %118, %116, %106, %96, %86
  %128 = load i32, i32* %17, align 4
  %129 = add nsw i32 %128, 1
  store i32 %129, i32* %17, align 4
  br label %50

130:                                              ; preds = %50
  %131 = load i32**, i32*** %16, align 8
  store i32* null, i32** %131, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
